2017-11-13  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] Require woff2 1.0.2 and drop direct brotli dependency
        https://bugs.webkit.org/show_bug.cgi?id=179630

        Reviewed by Frédéric Wang.

        * gtk/jhbuild.modules:

2017-11-08  Keith Miller  <keith_miller@apple.com>

        Async iteration should only fetch the next method once and add feature flag
        https://bugs.webkit.org/show_bug.cgi?id=179451

        Reviewed by Geoffrey Garen.

        Add feature flag for Async iteration.

        * TestWebKitAPI/Configurations/FeatureDefines.xcconfig:

2017-11-13  Gabriel Ivascu  <givascu@igalia.com>

        [GTK] Automatically adjust font size when gtk-xft-dpi changes
        https://bugs.webkit.org/show_bug.cgi?id=142673

        Reviewed by Michael Catanzaro.

        * TestWebKitAPI/Tests/WebKitGLib/TestWebKitSettings.cpp:
        (testWebKitSettings):

2017-11-13  Jonathan Bedard  <jbedard@apple.com>

        check-webkit-style cannot construct valid iOS version without an iOS SDK
        https://bugs.webkit.org/show_bug.cgi?id=179616
        <rdar://problem/35507018>

        Reviewed by David Kilzer.

        Instead of throwing an exception when we ask for an unavailable SDK on Mac,
        we should return None.

        * Scripts/webkitpy/common/system/platforminfo.py:
        (PlatformInfo.xcode_sdk_version): Return 'None' version if the machine does not
        have the requested SDK.

2017-11-13  Keith Miller  <keith_miller@apple.com>

        Uninitialized variable in sort-Xcode-project-file
        https://bugs.webkit.org/show_bug.cgi?id=179581

        Reviewed by Simon Fraser.

        Previously all the unified source files were named
        UnifiedSource<some-number>.mm. This was changed to
        UnifiedSource<some-number>-mm.mm to stop Xcode from creating
        hashes for mm and cpp unified source files with the same
        number. This broke the expectations in sort-Xcode-project-file.
