@@ -110,19 +110,29 @@ class ServerProcess(object):
         if self._proc:
             raise ValueError("%s already running" % self._name)
         self._reset()
-        # close_fds is a workaround for http://bugs.python.org/issue2320
-        # In Python 2.7.10, close_fds is also supported on Windows.
-        close_fds = True
         self._proc = self._target_host.executive.popen(self._cmd, stdin=self._target_host.executive.PIPE,
             stdout=self._target_host.executive.PIPE,
             stderr=self._target_host.executive.PIPE,
-            close_fds=close_fds,
+            close_fds=self._should_close_fds(),
             env=self._env,
             universal_newlines=self._universal_newlines)
         self._pid = self._proc.pid
         if not self._use_win32_apis:
             self._set_file_nonblocking(self._proc.stdout)
             self._set_file_nonblocking(self._proc.stderr)
+
+    def _should_close_fds(self):
+        # We need to pass close_fds=True to work around Python bug #2320
+        # (otherwise we can hang when we kill DumpRenderTree when we are running
+        # multiple threads). See http://bugs.python.org/issue2320 .
+        # In Python 2.7.10, close_fds is also supported on Windows.
+        # However, "you cannot set close_fds to true and also redirect the standard
+        # handles by setting stdin, stdout or stderr.".
+        platform = self._port.host.platform
+        if platform.is_win() and not platform.is_cygwin():
+            return False
+        else:
+            return True
 
     def _handle_possible_interrupt(self):
         """This routine checks to see if the process crashed or exited
