@@ -1,3 +1,14 @@
+2017-11-13  Basuke Suzuki  <Basuke.Suzuki@sony.com>
+
+        [Windows] Fix Python error for subprocess.popen with close_fds
+        https://bugs.webkit.org/show_bug.cgi?id=179553
+
+        Reviewed by Per Arne Vollan.
+
+        * Scripts/webkitpy/port/server_process.py:
+        (ServerProcess._start):
+        (ServerProcess._should_close_fds):
+
 2017-11-13  Michael Catanzaro  <mcatanzaro@igalia.com>
 
         [GTK] Require woff2 1.0.2 and drop direct brotli dependency
